--- a/about-one.html
+++ b/about-one.html
@@ -86,7 +86,7 @@
      Hello Deads <span class="red"> </span> 
     </div>
     <div class="about-text-content  text-scroll">
-      Hsuwuii susisiwiw sisisisiwiw sisiws sisie sisuw sjsue eiwie eieie eieie eieie eieie euwiw euwiw suwiw wuwue eisus sjsus sjsjw wjjs sjsuw sjsjw wjsuw sjwieiwje djsjd ej
+      Men in Dead Suit is an avant-garde metal band pushing the boundaries of heaviness through unconventional structures,eerie atmospheres and raw emotional intensity.Fronted by Tha Xavier on vocals,the band delivers haunting narratives layered over aggressive and experimental soundscapes.Dr.Lunatix leads with razor-sharp guitar work,while RedRum blends rhythm and lead guitars to create dissonant yet powerful textures.Noopura anchors the chaos with deep driving basslines and Chira fuels the sound with precise,relentless drumming.Together,Men in Dead Suit craft music that challenges norms and embraces darkness,unpredictability and artistic freedom.
     </div>
     
    </div>
