--- a/songs-one.html
+++ b/songs-one.html
@@ -81,7 +81,7 @@
 <div class="song fade-up">
 
     <div class="song-img">
-        <img src="images/album-thumbnail-one.jpg" alt="song">
+        <img src="images/Escape.jpg" alt="song">
     </div>
 
     <div class="song-details">
@@ -113,7 +113,7 @@
         <!-- SONG -->
 <div class="song fade-up">
     <div class="song-img">
-        <img src="images/album-thumbnail-two.jpg" alt="song">
+        <img src="images/Escape.jpg" alt="song">
     </div>
     <div class="song-details">
         <div class="song-details-content">
@@ -144,7 +144,7 @@
 
 
     <div class="song-img">
-        <img src="images/album-thumbnail-five.jpg" alt="song">
+        <img src="images/Escape.jpg" alt="song">
     </div>
 
     <div class="song-details">
@@ -184,7 +184,7 @@
 
 
     <div class="song-img">
-        <img src="images/album-thumbnail-four.jpg" alt="song"  data-song="blindinglights" class="play">
+        <img src="images/Escape.jpg" alt="song"  data-song="blindinglights" class="play">
     </div>
 
     <div class="song-details">
@@ -224,7 +224,7 @@
 
 
     <div class="song-img">
-        <img src="images/album-thumbnail-three.jpg" alt="song">
+        <img src="images/Escape.jpg" alt="song">
     </div>
 
     <div class="song-details">
@@ -263,7 +263,7 @@
 
 
     <div class="song-img">
-        <img src="images/album-thumbnail-six.jpg" alt="song">
+        <img src="images/Escape.jpg" alt="song">
     </div>
 
     <div class="song-details">
@@ -301,7 +301,7 @@
 
 
     <div class="song-img">
-        <img src="images/album-thumbnail-seven.jpg" alt="song">
+        <img src="images/Escape.jpg" alt="song">
     </div>
 
     <div class="song-details">
@@ -338,7 +338,7 @@
 
 
     <div class="song-img">
-        <img src="images/album-thumbnail-eight.jpg" alt="song">
+        <img src="images/Escape.jpg" alt="song">
     </div>
 
     <div class="song-details">
@@ -352,14 +352,14 @@
                 <img src="images/play.png" alt="play" data-song="darkfire" >
                 <!--   DATA-SONG AND DATA-AUDIO VALUE SHOULD MATCH   -->
                 <audio data-audio="darkfire">
-                    <source src="music/The-Weeknd-Blinding-Lights-_Lyrics_.ogg" type="audio/ogg">
-                    <source src="music/The Weeknd - Blinding Lights (Lyrics).mp3" type="audio/mp3">
+                    <source src="music/" type="audio/ogg">
+                    <source src="music/Thy Misbelief.mp3" type="audio/mp3">
                     </audio> 
             </div>
 
 
             <div class="download-song">
-                <a href="music/The Weeknd - Blinding Lights (Lyrics).mp3"  download="Dark Fire - Arlo Brown">1.8K<img src="images/download.png" alt="download"></a>
+                <a href="music/Thy Misbelief.mp3"  download="They Misbelief">1.8K<img src="images/download.png" alt="download"></a>
             </div>
         </div>
     </div>
@@ -373,11 +373,11 @@
         <!-- SONG -->
 <div class="song fade-up">
     <div class="song-img">
-        <img src="images/album-thumbnail-nine.jpg" alt="song">
+        <img src="images/Escape.jpg" alt="song">
     </div>
     <div class="song-details">
         <div class="song-details-content">
-            <div class="song-name">Mike Patton</div>
+            <div class="song-name">Tilt A Whirl</div>
             <div class="artist-name">MIDS</div>
         </div>
         <div class="music-player">
@@ -386,12 +386,12 @@
                 <img src="images/play.png" alt="play" data-song="theotherside" >
                 <!--   DATA-SONG AND DATA-AUDIO VALUE SHOULD MATCH   -->
                 <audio data-audio="theotherside">
-                    <source src="music/killmonger.ogg" type="audio/ogg">
-                    <source src="music/killmonger.mp3" type="audio/mp3">
+                    <source src="" type="audio/ogg">
+                    <source src="" type="audio/mp3">
                     </audio> 
             </div>
             <div class="download-song">
-                <a href="music/killmonger.mp3"  download="The Other Side - Arlo Brown">2.2K<img src="images/download.png" alt="download"></a>
+                <a href=""  download="">2.2K<img src="images/download.png" alt="download"></a>
             </div>
         </div>
     </div>
