--- a/blog-one.html
+++ b/blog-one.html
@@ -78,7 +78,7 @@
     <!-- BLOG -->
     <div class="blog fade-up">
             <div class="blog-img">
-                <img src="images/album-thumbnail-five.jpg" alt="blog-img">
+                <img src="images/mids1.jpg" alt="blog-img">
             </div>
             <div class="blog-text">
                 <div class="blog-heading">Escape From Asylum</div>
