--- a/blog-single.html
+++ b/blog-single.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News - 1</title>
+    <title>Escape From Asylum</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
@@ -57,7 +57,7 @@
   <!-- HEADING -->
   <div class="heading">
       <div class="text">
-        NEWS TEMPLATE
+        Escape From Asylum
       </div>
   </div>
   
@@ -85,7 +85,7 @@
     <!-- BLOG INFO -->
 
     <div class="blog-info">
-      <div class="blog-date text-scroll">August 3, 2020</div>
+      <div class="blog-date text-scroll">January 27, 2026</div>
       <div class="blog-duration img-scroll text-scroll"><img src="images/clock.png" alt="clock">&nbsp; 4 Min </div>
     </div>
   
@@ -102,14 +102,16 @@
 
     <!-- PARAGRAPH -->
     <div class="para text-scroll">
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque ipsa quo beatae placeat. Consequuntur quo ducimus mollitia voluptatem quos dolorum cum obcaecati nostrum, porro dignissimos consectetur aspernatur necessitatibus beatae odit?
+      Written and recorded between November 2024 and December 2025,this album captures a long,obsessive descent and the violent urge to break free.Across 12 tracks and 50 minutes,the band blends metal and avant-garde elements,rejecting structure,comfort and predictability.
+
+Each track represents a fractured state of mind.confinement,hallucination,rage,clarity and escape.The sound shifts without warning,chaotic,experimental and deliberately uncomfortable,mirroring the atmosphere of an asylum where nothing is stable and no one is fully sane.
       </div>
     <!-- PARAGRAPH -->
 
 
     <!-- PARAGRAPH -->
     <div class="para text-scroll">
-       Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime expedita ratione excepturi aspernatur! Doloribus dicta, sit autem est praesentium minima eos aperiam! Illo vel totam odio dicta accusantium cupiditate doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quam inventore laborum nulla voluptatibus possimus veniam expedita cupiditate hic facere id at quod officiis cum sint, aliquid quas corporis suscipit!
+       This is not a concept for storytelling alone,but a psychological experience meant to be endured.
         </div>
       <!-- PARAGRAPH -->
 
@@ -131,14 +133,14 @@
 
       <!-- PARAGRAPH ITALIC-->
     <div class="para text-scroll italic ">
-     <i>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda nisi, libero facere mollitia iure ex aspernatur corporis!"</i>
+     <i>""</i>
         </div>
       <!-- PARAGRAPH ITALIC -->
 
 
         <!-- PARAGRAPH -->
     <div class="para text-scroll">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime expedita ratione excepturi aspernatur! Doloribus dicta, sit autem est praesentium minima eos aperiam! Illo vel totam odio dicta accusantium cupiditate doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quam inventore laborum nulla voluptatibus possimus veniam expedita cupiditate hic facere id at quod officiis cum sint, aliquid quas corporis suscipit!
+         
          </div>
        <!-- PARAGRAPH -->
 
@@ -167,7 +169,7 @@
        <!-- SHARE LINKS -->
 
        <div class="signature">
-        <span class="text-scroll"> Dr.Lunatix</span> 
+        <span class="text-scroll">Men In Dead Suit</span> 
      </div>
 
 </div>
