--- a/blog-single.html
+++ b/blog-single.html
@@ -69,7 +69,7 @@
  <!-- BLOG IMG -->
  <div class="blog-img img">
 
-    <img src="images/main-bg-three.jpg" alt="blog-img">
+    <img src="images/mids2.jpg" alt="blog-img">
 
   </div>
   <!-- BLOG IMG -->
