--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <div class="new-release img text">
 
 
-    <img src="images/album-thumbnail-one.jpg" alt="new-release">
+    <img src="images/Escape.jpg" alt="new-release">
 <div class="song-details">
     <div class="song-name">Escape From Asylum</div>
     <div class="singer-name">Men In Dead Suit</div>
@@ -123,7 +123,7 @@
     <div class="play-song">
         <img src="images/play.png" alt="play" data-song="darkfire" class="hover" >
        
-        <audio src="music/The-Weeknd-Blinding-Lights-_Lyrics_.ogg" data-audio="darkfire"></audio> <!--LINK AND NAME OF AUDIO YOU WANT TO PLAY-->
+        <audio src="music/Escape From Asylum.ogg" data-audio="Escape From Asylum"></audio> <!--LINK AND NAME OF AUDIO YOU WANT TO PLAY-->
     </div>
     <div class="all-songs">
         <a href="songs-one.html" title="All Songs"><i class="gg-arrow-right"></i></a>
