--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="singer-name">Men In Dead Suit</div>
     <div class="music-player">
     <div class="play-song">
-        <img src="images/play.png" alt="play" data-song="darkfire" class="hover" >
+        <img src="images/play.png" alt="play" data-song="Escape From Asylum" class="hover" >
        
         <audio src="music/Escape From Asylum.ogg" data-audio="Escape From Asylum"></audio> <!--LINK AND NAME OF AUDIO YOU WANT TO PLAY-->
     </div>
