--- a/about-one.html
+++ b/about-one.html
@@ -97,6 +97,7 @@
     <span class="text-scroll"> Tha Xavier</span>
     <span class="text-scroll"> RedRum</span>
     <span class="text-scroll"> Noopura</span>
+    <span class="text-scroll"> Chira</span>
 </div>
 
 
