--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
             <a href="#" class="text">MEN IN DEAD SUIT</a>
          </div>
         <ul class="navigation-ul">
-            <li><a href="index.html" data-text="HOME" data-img="images/bg-image-three.jpg">HOME</a></li>
-            <li><a href="about-one.html"  data-text="ABOUT"  data-img="images/about-img.jpg">ABOUT</a></li>
-            <li><a href="songs-one.html" data-text="RELEASES"  data-img="images/album-thumbnail-nine.jpg">RELEASES</a></li>
-            <li><a href="blog-one.html"  data-text="NEWS" data-img="images/main-bg-three.jpg">NEWS</a></li>
-            <li><a href="contact-one.html"  data-text="CONTACT" data-img="images/album-thumbnail-four.jpg">CONTACT</a></li>
+            <li><a href="index.html" data-text="HOME" data-img="images/">HOME</a></li>
+            <li><a href="about-one.html"  data-text="ABOUT"  data-img="images/">ABOUT</a></li>
+            <li><a href="songs-one.html" data-text="RELEASES"  data-img="images/">RELEASES</a></li>
+            <li><a href="blog-one.html"  data-text="NEWS" data-img="images/">NEWS</a></li>
+            <li><a href="contact-one.html"  data-text="CONTACT" data-img="images/">CONTACT</a></li>
         </ul>
         <div class="navigation-close hover about-close opacity">
             <div class="navigation-close-line"></div>
