--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
     <div class="social-media-links">
   <ul>
     <li>
-      <a href="#" data-text="Youtube" class="text hover">
+      <a href="https://www.youtube.com/@menindeadsuitofficial" data-text="Youtube" class="text hover">
         <i class="fab fa-youtube"></i> 
       </a>
     </li>
     <li>
-      <a href="#" data-text="Facebook" class="text hover">
+      <a href="https://www.facebook.com/profile.php?id=61578980781780" data-text="Facebook" class="text hover">
         <i class="fab fa-facebook-f"></i> 
       </a>
     </li>
@@ -90,12 +90,12 @@
     </li>
     
     <li>
-      <a href="#" data-text="Spotify" class="text hover">
+      <a href="https://open.spotify.com/artist/6YeFBnVZAvSRQFytdN9EFy?si=YfsuNYR6SUapnzhcSOYEQA" data-text="Spotify" class="text hover">
         <i class="fab fa-spotify"></i> 
       </a>
     </li>
     <li>
-      <a href="#" data-text="Apple Music" class="text hover">
+      <a href="https://music.amazon.com/artists/B0G2HCDGV6/men-in-dead-suit?marketplaceId=ATVPDKIKX0DER&musicTerritory=US&ref=dm_sh_RZzdOchE7SCdxFF4QYkhlllf0" data-text="Apple Music" class="text hover">
         <i class="fab fa-apple"></i> 
       </a>
     </li>
