--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </a>
     </li>
     <li>
-      <a href="https://music.apple.com/lk/artist/men-in-dead-suit/1852243107" data-text"Apple Music" class="text hover">
+      <a href="https://music.apple.com/lk/artist/men-in-dead-suit/1852243107" data-text="Apple Music" class="text hover">
         <i class="fab fa-apple"></i> 
       </a>
     </li>
