--- a/blog-single.html
+++ b/blog-single.html
@@ -149,17 +149,17 @@ Each track represents a fractured state of mind.confinement,hallucination,rage,c
        <div class="share-links para">
          <ul>
     <li>
-      <a href="#" data-text="Twitter" class="text hover">
+      <a href="https://x.com/menindeadsuit?t=IUyxq9C14hUMAiFR8j1ykA" data-text="Twitter" class="text hover">
         <i class="fab fa-twitter"></i>
       </a>
     </li>
     <li>
-      <a href="#" data-text="Facebook" class="text hover">
+      <a href="https://www.facebook.com/profile.php?id=61578980781780" data-text="Facebook" class="text hover">
         <i class="fab fa-facebook-f"></i>
       </a>
     </li>
     <li>
-      <a href="#" data-text="Instagram" class="text hover">
+      <a href="https://www.instagram.com/menindeadsuit" data-text="Instagram" class="text hover">
         <i class="fab fa-instagram"></i>
       </a>
     </li>
@@ -244,28 +244,28 @@ Each track represents a fractured state of mind.confinement,hallucination,rage,c
         <div class="social-media-links-navigation">
             <ul>
     <li>
-      <a href="#" data-text="Youtube" class="text hover">
+      <a href="https://www.youtube.com/@menindeadsuitofficial" data-text="Youtube" class="text hover">
         <i class="fab fa-youtube"></i>
       </a>
     </li>
     <li>
-      <a href="#" data-text="Facebook" class="text hover">
+      <a href="https://www.facebook.com/profile.php?id=61578980781780" data-text="Facebook" class="text hover">
         <i class="fab fa-facebook-f"></i>
       </a>
     </li>
     <li>
-      <a href="#" data-text="Instagram" class="text hover">
+      <a href="https://www.instagram.com/menindeadsuit" data-text="Instagram" class="text hover">
         <i class="fab fa-instagram"></i>
       </a>
     </li>
     
     <li>
-      <a href="#" data-text="Spotify" class="text hover">
+      <a href="https://open.spotify.com/artist/6YeFBnVZAvSRQFytdN9EFy?si=IiliLjQqRFq4yp1rItE2VQ" data-text="Spotify" class="text hover">
         <i class="fab fa-spotify"></i>
       </a>
     </li>
     <li>
-      <a href="#" data-text="Apple Music" class="text hover">
+      <a href="https://music.apple.com/lk/artist/men-in-dead-suit/1852243107" data-text="Apple Music" class="text hover">
         <i class="fab fa-apple"></i>
       </a>
     </li>
