--- a/index.html
+++ b/index.html
@@ -175,28 +175,28 @@
         <div class="social-media-links-navigation">
             <ul>
     <li>
-      <a href="#" data-text="Youtube" class="text hover">
+      <a href="https://www.youtube.com/@menindeadsuitofficial" data-text="Youtube" class="text hover">
         <i class="fab fa-youtube"></i>
       </a>
     </li>
     <li>
-      <a href="#" data-text="Facebook" class="text hover">
+      <a href="https://www.facebook.com/profile.php?id=61578980781780" data-text="Facebook" class="text hover">
         <i class="fab fa-facebook-f"></i>
       </a>
     </li>
     <li>
-      <a href="#" data-text="Instagram" class="text hover">
+      <a href="https://www.instagram.com/menindeadsuit" data-text="Instagram" class="text hover">
         <i class="fab fa-instagram"></i>
       </a>
     </li>
     
     <li>
-      <a href="#" data-text="Spotify" class="text hover">
+      <a href="https://open.spotify.com/artist/6YeFBnVZAvSRQFytdN9EFy" data-text="Spotify" class="text hover">
         <i class="fab fa-spotify"></i>
       </a>
     </li>
     <li>
-      <a href="#" data-text="Apple Music" class="text hover">
+      <a href="https://music.apple.com/lk/artist/men-in-dead-suit/1852243107" data-text="Apple Music" class="text hover">
         <i class="fab fa-apple"></i>
       </a>
     </li>
