--- a/about-one.html
+++ b/about-one.html
@@ -76,14 +76,14 @@
 <div class="center">
   <!-- ABOUT IMG -->
   <div class="about-img img">
-    <img class="img-parallax" src="images/about-img.jpg" alt="about-img">
+    <img class="img-parallax" src="images/mids3.jpg" alt="about-img">
   </div>
   <!-- ABOUT IMG -->
 </div>
 <div class="center">
   <div class="about-text">
     <div class="about-text-heading  text-scroll">
-     Hello Deads <span class="red"> </span> 
+      <span class="red"> </span> 
     </div>
     <div class="about-text-content  text-scroll">
       Men in Dead Suit is an avant-garde metal band pushing the boundaries of heaviness through unconventional structures,eerie atmospheres and raw emotional intensity.Fronted by Tha Xavier on vocals,the band delivers haunting narratives layered over aggressive and experimental soundscapes.Dr.Lunatix leads with razor-sharp guitar work,while RedRum blends rhythm and lead guitars to create dissonant yet powerful textures.Noopura anchors the chaos with deep driving basslines and Chira fuels the sound with precise,relentless drumming.Together,Men in Dead Suit craft music that challenges norms and embraces darkness,unpredictability and artistic freedom.
